--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <h2>Esercizio per Casa</h2>
     <div class="container">
+        <!-- Prima sezione -->
         <!-- Prima riga -->
         <div class="row">
             <div class="col-1">
@@ -126,11 +127,78 @@
                 </div>
             </div>
         </div>
+        <!-- Seconda sezione -->
         <div class="space">
+            <!-- Prima riga -->
             <div class="row">
                 <div class="col-12"></div>
             </div>
+            <!-- Seconda riga -->
+            <div class="row">
+                <div class="col-1">
+
+                </div>
+                <div class="col-11">
+
+                </div>
+            </div>
+            <!-- Terza riga -->
+            <div class="row">
+                <div class="col-2">
+
+                </div>
+                <div class="col-10">
+
+                </div>
+            </div>
+            <!-- Quarta riga -->
+            <div class="row">
+                <div class="col-3">
+
+                </div>
+                <div class="col-9">
+
+                </div>
+            </div>
+            <!-- Quinta riga -->
+            <div class="row">
+                <div class="col-4">
+
+                </div>
+                <div class="col-8">
+
+                </div>
+            </div>
+            <!-- Sesta riga -->
+            <div class="row">
+                <div class="col-5">
+
+                </div>
+                <div class="col-7">
+
+                </div>
+            </div>
+            <!-- Settima riga -->
+            <div class="row">
+                <div class="col-6">
+
+                </div>
+                <div class="col-6">
+
+                </div>
+            </div>
         </div>
+        <!-- Terza sezione -->
+        <h2>Offset</h2>
+        <div class="row">
+            <div class="col-offset-11">
+
+            </div>
+            <div class="col-1">
+
+            </div>
+        </div>
+
     </div>
 
 </body>
