--- a/index.html
+++ b/index.html
@@ -16,112 +16,112 @@
         <!-- Prima sezione -->
         <!-- Prima riga -->
         <div class="row">
-            <div class="col-1">
+            <div class="col-1 border-padd">
                 <span>1 col</span>
             </div>
-            <div class="col-1">
+            <div class="col-1 border-padd">
                 <span>1 col</span>
             </div>
-            <div class="col-1">
+            <div class="col-1 border-padd">
                 <span>1 col</span>
             </div>
-            <div class="col-1">
+            <div class="col-1 border-padd">
                 <span>1 col</span>
             </div>
-            <div class="col-1">
+            <div class="col-1 border-padd">
                 <span>1 col</span>
             </div>
-            <div class="col-1">
+            <div class="col-1 border-padd">
                 <span>1 col</span>
             </div>
-            <div class="col-1">
+            <div class="col-1 border-padd">
                 <span>1 col</span>
             </div>
-            <div class="col-1">
+            <div class="col-1 border-padd">
                 <span>1 col</span>
             </div>
-            <div class="col-1">
+            <div class="col-1 border-padd">
                 <span>1 col</span>
             </div>
-            <div class="col-1">
+            <div class="col-1 border-padd">
                 <span>1 col</span>
             </div>
-            <div class="col-1">
+            <div class="col-1 border-padd">
                 <span>1 col</span>
             </div>
-            <div class="col-1">
+            <div class="col-1 border-padd">
                 <span>1 col</span>
             </div>
         </div>
         <!-- Seconda riga -->
         <div class="row">
-            <div class="col-2">
+            <div class="col-2 border-padd">
                 <span>col</span>
             </div>
-            <div class="col-5">
+            <div class="col-5 border-padd">
                 <span>col</span>
             </div>
-            <div class="col-5">
+            <div class="col-5 border-padd">
                 <span>col</span>
             </div>
         </div>
         <!-- Terza riga -->
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 border-padd">
                 <span>12 col</span>
             </div>
         </div>
         <!-- Quarta riga -->
         <div class="row">
-            <div class="col-8">
+            <div class="col-8 border-padd">
                 <span>8 col</span>
             </div>
-            <div class="col-2">
+            <div class="col-2 border-padd">
                 <span>2 col</span>
             </div>
-            <div class="col-2">
+            <div class="col-2 border-padd">
                 <span>2 col</span>
             </div>
         </div>
         <!-- Quinta riga -->
         <div class="row">
-            <div class="col-1">
+            <div class="col-1 border-padd">
                 <span>1 col</span>
             </div>
-            <div class="col-2">
+            <div class="col-2 border-padd">
                 <span>2 col</span>
             </div>
-            <div class="col-2">
+            <div class="col-2 border-padd">
                 <span>2 col</span>
             </div>
-            <div class="col-6">
+            <div class="col-6 border-padd">
                 <span>6 col</span>
             </div>
-            <div class="col-1">
+            <div class="col-1 border-padd">
                 <span>1 col</span>
             </div>
         </div>
         <!-- Sesta riga -->
         <div class="row">
-            <div class="col-6">
+            <div class="col-6 border-padd">
                 <div class="row">
-                    <div class="col-2 nested">
+                    <div class="col-2 border-padd nested">
                         <span>Nested 2 col</span>
                     </div>
-                    <div class="col-2 nested">
+                    <div class="col-2 border-padd nested">
                         <span>Nested 2 col</span>
                     </div>
-                    <div class="col-8 nested">
+                    <div class="col-8 border-padd nested">
                         <span>Nested 8 col</span>
                     </div>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-6 border-padd">
                 <div class="row">
-                    <div class="col-6 nested">
+                    <div class="col-6 border-padd nested">
                         <span>Nested 6 col</span>
                     </div>
-                    <div class="col-6 nested">
+                    <div class="col-6 border-padd nested">
                         <span>Nested 6 col</span>
                     </div>
                 </div>
@@ -131,74 +131,166 @@
         <div class="space">
             <!-- Prima riga -->
             <div class="row">
-                <div class="col-12"></div>
+                <div class="col-12 border-padd">
+
+                </div>
             </div>
             <!-- Seconda riga -->
             <div class="row">
-                <div class="col-1">
+                <div class="col-1 border-padd">
 
                 </div>
-                <div class="col-11">
+                <div class="col-11 border-padd">
 
                 </div>
             </div>
             <!-- Terza riga -->
             <div class="row">
-                <div class="col-2">
+                <div class="col-2 border-padd">
 
                 </div>
-                <div class="col-10">
+                <div class="col-10 border-padd">
 
                 </div>
             </div>
             <!-- Quarta riga -->
             <div class="row">
-                <div class="col-3">
+                <div class="col-3 border-padd">
 
                 </div>
-                <div class="col-9">
+                <div class="col-9 border-padd">
 
                 </div>
             </div>
             <!-- Quinta riga -->
             <div class="row">
-                <div class="col-4">
+                <div class="col-4 border-padd">
 
                 </div>
-                <div class="col-8">
+                <div class="col-8 border-padd">
 
                 </div>
             </div>
             <!-- Sesta riga -->
             <div class="row">
-                <div class="col-5">
+                <div class="col-5 border-padd">
 
                 </div>
-                <div class="col-7">
+                <div class="col-7 border-padd">
 
                 </div>
             </div>
             <!-- Settima riga -->
             <div class="row">
-                <div class="col-6">
+                <div class="col-6 border-padd">
 
                 </div>
-                <div class="col-6">
+                <div class="col-6 border-padd">
 
                 </div>
             </div>
         </div>
         <!-- Terza sezione -->
         <h2>Offset</h2>
+        <!-- Prima riga -->
         <div class="row">
             <div class="col-offset-11">
 
             </div>
-            <div class="col-1">
+            <div class="col-1 border-padd">
 
             </div>
         </div>
+        <!-- Seconda riga -->
+        <div class="row">
+            <div class="col-offset-10">
 
+            </div>
+            <div class="col-2 border-padd">
+
+            </div>
+        </div>
+        <!-- Terza riga -->
+        <div class="row">
+            <div class="col-offset-9">
+
+            </div>
+            <div class="col-3 border-padd">
+
+            </div>
+        </div>
+        <!-- Quarta riga -->
+        <div class="row">
+            <div class="col-offset-8">
+
+            </div>
+            <div class="col-4 border-padd">
+
+            </div>
+        </div>
+        <!-- Quinta riga -->
+        <div class="row">
+            <div class="col-offset-7">
+
+            </div>
+            <div class="col-5 border-padd">
+
+            </div>
+        </div>
+        <!-- Sesta riga -->
+        <div class="row">
+            <div class="col-offset-6">
+
+            </div>
+            <div class="col-6 border-padd">
+
+            </div>
+        </div>
+        <!-- Settima riga -->
+        <div class="row">
+            <div class="col-offset-5">
+
+            </div>
+            <div class="col-7 border-padd">
+
+            </div>
+        </div>
+        <!-- Ottava riga -->
+        <div class="row">
+            <div class="col-offset-4">
+
+            </div>
+            <div class="col-8 border-padd">
+
+            </div>
+        </div>
+        <!-- Nona riga -->
+        <div class="row">
+            <div class="col-offset-3">
+
+            </div>
+            <div class="col-9 border-padd">
+
+            </div>
+        </div>
+        <!-- Decima riga -->
+        <div class="row">
+            <div class="col-offset-2">
+
+            </div>
+            <div class="col-10 border-padd">
+
+            </div>
+        </div>
+        <!-- Undicesima riga -->
+        <div class="row">
+            <div class="col-offset-1">
+
+            </div>
+            <div class="col-11 border-padd">
+
+            </div>
+        </div>
     </div>
 
 </body>
