--- a/index.html
+++ b/index.html
@@ -16,113 +16,175 @@
         <!-- Prima sezione -->
         <!-- Prima riga -->
         <div class="row">
-            <div class="col-1 border-padd">
-                <span>1 col</span>
+            <div class="col-1">
+                <div class="border-padd">
+                    <span>1 col</span>
+                </div>
             </div>
-            <div class="col-1 border-padd">
-                <span>1 col</span>
+            <div class="col-1">
+                <div class="border-padd">
+                    <span>1 col</span>
+                </div>
             </div>
-            <div class="col-1 border-padd">
-                <span>1 col</span>
+            <div class="col-1">
+                <div class="border-padd">
+                    <span>1 col</span>
+                </div>
             </div>
-            <div class="col-1 border-padd">
-                <span>1 col</span>
+            <div class="col-1">
+                <div class="border-padd">
+                    <span>1 col</span>
+                </div>
             </div>
-            <div class="col-1 border-padd">
-                <span>1 col</span>
+            <div class="col-1">
+                <div class="border-padd">
+                    <span>1 col</span>
+                </div>
             </div>
-            <div class="col-1 border-padd">
-                <span>1 col</span>
+            <div class="col-1">
+                <div class="border-padd">
+                    <span>1 col</span>
+                </div>
             </div>
-            <div class="col-1 border-padd">
-                <span>1 col</span>
+            <div class="col-1">
+                <div class="border-padd">
+                    <span>1 col</span>
+                </div>
             </div>
-            <div class="col-1 border-padd">
-                <span>1 col</span>
+            <div class="col-1">
+                <div class="border-padd">
+                    <span>1 col</span>
+                </div>
             </div>
-            <div class="col-1 border-padd">
-                <span>1 col</span>
+            <div class="col-1">
+                <div class="border-padd">
+                    <span>1 col</span>
+                </div>
             </div>
-            <div class="col-1 border-padd">
-                <span>1 col</span>
+            <div class="col-1">
+                <div class="border-padd">
+                    <span>1 col</span>
+                </div>
             </div>
-            <div class="col-1 border-padd">
-                <span>1 col</span>
+            <div class="col-1">
+                <div class="border-padd">
+                    <span>1 col</span>
+                </div>
             </div>
-            <div class="col-1 border-padd">
-                <span>1 col</span>
+            <div class="col-1">
+                <div class="border-padd">
+                    <span>1 col</span>
+                </div>
             </div>
         </div>
         <!-- Seconda riga -->
         <div class="row">
-            <div class="col-2 border-padd">
-                <span>col</span>
+            <div class="col-2">
+                <div class="border-padd">
+                    <span>col</span>
+                </div>
             </div>
-            <div class="col-5 border-padd">
-                <span>col</span>
+            <div class="col-5">
+                <div class="border-padd">
+                    <span>col</span>
+                </div>
             </div>
-            <div class="col-5 border-padd">
-                <span>col</span>
+            <div class="col-5">
+                <div class="border-padd">
+                    <span>col</span>
+                </div>
             </div>
         </div>
         <!-- Terza riga -->
         <div class="row">
-            <div class="col-12 border-padd">
-                <span>12 col</span>
+            <div class="col-12">
+                <div class="border-padd">
+                    <span>12 col</span>
+                </div>
             </div>
         </div>
         <!-- Quarta riga -->
         <div class="row">
-            <div class="col-8 border-padd">
-                <span>8 col</span>
+            <div class="col-8">
+                <div class="border-padd">
+                    <span>8 col</span>
+                </div>
             </div>
-            <div class="col-2 border-padd">
-                <span>2 col</span>
+            <div class="col-2">
+                <div class="border-padd">
+                    <span>2 col</span>
+                </div>
             </div>
-            <div class="col-2 border-padd">
-                <span>2 col</span>
+            <div class="col-2">
+                <div class="border-padd">
+                    <span>2 col</span>
+                </div>
             </div>
         </div>
         <!-- Quinta riga -->
         <div class="row">
-            <div class="col-1 border-padd">
-                <span>1 col</span>
+            <div class="col-1">
+                <div class="border-padd">
+                    <span>1 col</span>
+                </div>
             </div>
-            <div class="col-2 border-padd">
-                <span>2 col</span>
+            <div class="col-2">
+                <div class="border-padd">
+                    <span>2 col</span>
+                </div>
             </div>
-            <div class="col-2 border-padd">
-                <span>2 col</span>
+            <div class="col-2">
+                <div class="border-padd">
+                    <span>2 col</span>
+                </div>
             </div>
-            <div class="col-6 border-padd">
-                <span>6 col</span>
+            <div class="col-6">
+                <div class="border-padd">
+                    <span>6 col</span>
+                </div>
             </div>
-            <div class="col-1 border-padd">
-                <span>1 col</span>
+            <div class="col-1">
+                <div class="border-padd">
+                    <span>1 col</span>
+                </div>
             </div>
         </div>
         <!-- Sesta riga -->
         <div class="row">
-            <div class="col-6 border-padd">
-                <div class="row">
-                    <div class="col-2 border-padd nested">
-                        <span>Nested 2 col</span>
-                    </div>
-                    <div class="col-2 border-padd nested">
-                        <span>Nested 2 col</span>
-                    </div>
-                    <div class="col-8 border-padd nested">
-                        <span>Nested 8 col</span>
+            <div class="col-6">
+                <div class="border-padd">
+                    <div class="row">
+                        <div class="col-2">
+                            <div class="nested">
+                                <span>Nested 2 col</span>
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <div class="nested">
+                                <span>Nested 2 col</span>
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <div class="nested">
+                                <span>Nested 8 col</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-6 border-padd">
-                <div class="row">
-                    <div class="col-6 border-padd nested">
-                        <span>Nested 6 col</span>
-                    </div>
-                    <div class="col-6 border-padd nested">
-                        <span>Nested 6 col</span>
+            <div class="col-6">
+                <div class="border-padd">
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="nested">
+                                <span>Nested 6 col</span>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="nested">
+                                <span>Nested 6 col</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -131,62 +193,88 @@
         <div class="space">
             <!-- Prima riga -->
             <div class="row">
-                <div class="col-12 border-padd">
+                <div class="col-12">
+                    <div class="border-padd">
 
+                    </div>
                 </div>
             </div>
             <!-- Seconda riga -->
             <div class="row">
-                <div class="col-1 border-padd">
+                <div class="col-1">
+                    <div class="border-padd">
 
+                    </div>
                 </div>
-                <div class="col-11 border-padd">
+                <div class="col-11">
+                    <div class="border-padd">
 
+                    </div>
                 </div>
             </div>
             <!-- Terza riga -->
             <div class="row">
-                <div class="col-2 border-padd">
+                <div class="col-2">
+                    <div class="border-padd">
 
+                    </div>
                 </div>
-                <div class="col-10 border-padd">
+                <div class="col-10">
+                    <div class="border-padd">
 
+                    </div>
                 </div>
             </div>
             <!-- Quarta riga -->
             <div class="row">
-                <div class="col-3 border-padd">
+                <div class="col-3">
+                    <div class="border-padd">
 
+                    </div>
                 </div>
-                <div class="col-9 border-padd">
+                <div class="col-9">
+                    <div class="border-padd">
 
+                    </div>
                 </div>
             </div>
             <!-- Quinta riga -->
             <div class="row">
-                <div class="col-4 border-padd">
+                <div class="col-4">
+                    <div class="border-padd">
 
+                    </div>
                 </div>
-                <div class="col-8 border-padd">
+                <div class="col-8">
+                    <div class="border-padd">
 
+                    </div>
                 </div>
             </div>
             <!-- Sesta riga -->
             <div class="row">
-                <div class="col-5 border-padd">
+                <div class="col-5">
+                    <div class="border-padd">
 
+                    </div>
                 </div>
-                <div class="col-7 border-padd">
+                <div class="col-7">
+                    <div class="border-padd">
 
+                    </div>
                 </div>
             </div>
             <!-- Settima riga -->
             <div class="row">
-                <div class="col-6 border-padd">
+                <div class="col-6">
+                    <div class="border-padd">
 
+                    </div>
                 </div>
-                <div class="col-6 border-padd">
+                <div class="col-6">
+                    <div class="border-padd">
 
+                    </div>
                 </div>
             </div>
         </div>
@@ -197,8 +285,10 @@
             <div class="col-offset-11">
 
             </div>
-            <div class="col-1 border-padd">
+            <div class="col-1">
+                <div class="border-padd">
 
+                </div>
             </div>
         </div>
         <!-- Seconda riga -->
@@ -206,8 +296,10 @@
             <div class="col-offset-10">
 
             </div>
-            <div class="col-2 border-padd">
+            <div class="col-2">
+                <div class="border-padd">
 
+                </div>
             </div>
         </div>
         <!-- Terza riga -->
@@ -215,8 +307,10 @@
             <div class="col-offset-9">
 
             </div>
-            <div class="col-3 border-padd">
+            <div class="col-3">
+                <div class="border-padd">
 
+                </div>
             </div>
         </div>
         <!-- Quarta riga -->
@@ -224,8 +318,10 @@
             <div class="col-offset-8">
 
             </div>
-            <div class="col-4 border-padd">
+            <div class="col-4">
+                <div class="border-padd">
 
+                </div>
             </div>
         </div>
         <!-- Quinta riga -->
@@ -233,8 +329,10 @@
             <div class="col-offset-7">
 
             </div>
-            <div class="col-5 border-padd">
+            <div class="col-5">
+                <div class="border-padd">
 
+                </div>
             </div>
         </div>
         <!-- Sesta riga -->
@@ -242,8 +340,10 @@
             <div class="col-offset-6">
 
             </div>
-            <div class="col-6 border-padd">
+            <div class="col-6">
+                <div class="border-padd">
 
+                </div>
             </div>
         </div>
         <!-- Settima riga -->
@@ -251,8 +351,10 @@
             <div class="col-offset-5">
 
             </div>
-            <div class="col-7 border-padd">
+            <div class="col-7">
+                <div class="border-padd">
 
+                </div>
             </div>
         </div>
         <!-- Ottava riga -->
@@ -260,8 +362,10 @@
             <div class="col-offset-4">
 
             </div>
-            <div class="col-8 border-padd">
+            <div class="col-8">
+                <div class="border-padd">
 
+                </div>
             </div>
         </div>
         <!-- Nona riga -->
@@ -269,8 +373,10 @@
             <div class="col-offset-3">
 
             </div>
-            <div class="col-9 border-padd">
+            <div class="col-9">
+                <div class="border-padd">
 
+                </div>
             </div>
         </div>
         <!-- Decima riga -->
@@ -278,8 +384,10 @@
             <div class="col-offset-2">
 
             </div>
-            <div class="col-10 border-padd">
+            <div class="col-10">
+                <div class="border-padd">
 
+                </div>
             </div>
         </div>
         <!-- Undicesima riga -->
@@ -287,8 +395,10 @@
             <div class="col-offset-1">
 
             </div>
-            <div class="col-11 border-padd">
+            <div class="col-11">
+                <div class="border-padd">
 
+                </div>
             </div>
         </div>
     </div>
